[gd_scene load_steps=7 format=3 uid="uid://diri6chvmpdno"]

[ext_resource type="Script" uid="uid://cnc2xrfodphdl" path="res://scripts/select_level.gd" id="1_yd4kl"]
[ext_resource type="Script" uid="uid://bj833aujnn8bq" path="res://scripts/first_five_button.gd" id="2_c5rqm"]
[ext_resource type="Script" uid="uid://batyrmpmqls8" path="res://scripts/first_fifteen_button.gd" id="3_mbmv6"]
[ext_resource type="Script" uid="uid://n76633din8rm" path="res://scripts/first_twenty_five_button.gd" id="4_gb6kv"]
[ext_resource type="Script" uid="uid://n07mtosujvwg" path="res://scripts/first_thirty_five_button.gd" id="5_trl3s"]
[ext_resource type="Script" uid="uid://b65ln3hx5f1c4" path="res://scripts/all_hiragana_button.gd" id="6_u3vox"]

[node name="SelectLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_yd4kl")

[node name="SelectLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.043
anchor_right = 0.5
anchor_bottom = 0.043
offset_left = -103.5
offset_top = 0.13599968
offset_right = 103.5
offset_bottom = 45.136
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "LEVEL SELECT"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.86600006
anchor_right = 0.5
anchor_bottom = 0.86600006
offset_left = -92.5
offset_top = -31.16803
offset_right = 92.5
offset_bottom = 30.83197
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
text = "BACK"

[node name="Levels" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FirstFiveButton" type="Button" parent="Levels" groups=["level_buttons"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.0
anchor_top = 2.6250002
anchor_right = 2.0
anchor_bottom = 2.6250002
offset_right = 287.87234
offset_bottom = 164.0
focus_mode = 0
script = ExtResource("2_c5rqm")

[node name="FirstFifteenButton" type="Button" parent="Levels" groups=["level_buttons"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 14.400001
anchor_top = 2.637
anchor_right = 14.400001
anchor_bottom = 2.637
offset_left = -144.0
offset_top = 0.019996643
offset_right = 144.0
offset_bottom = 165.01999
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
script = ExtResource("3_mbmv6")

[node name="FirstTwentyFiveButton" type="Button" parent="Levels" groups=["level_buttons"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 26.800001
anchor_top = 2.6250002
anchor_right = 26.800001
anchor_bottom = 2.6250002
offset_left = -287.0
offset_bottom = 164.0
focus_mode = 0
script = ExtResource("4_gb6kv")

[node name="FirstThirtyFiveButton" type="Button" parent="Levels" groups=["level_buttons"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.0
anchor_top = 11.85
anchor_right = 2.0
anchor_bottom = 11.85
offset_top = -164.0
offset_right = 287.87234
focus_mode = 0
script = ExtResource("5_trl3s")

[node name="AllHiraganaButton" type="Button" parent="Levels" groups=["level_buttons"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 14.400001
anchor_top = 11.875001
anchor_right = 14.400001
anchor_bottom = 11.875001
offset_left = -144.0
offset_top = -165.00003
offset_right = 144.0
offset_bottom = -3.0517578e-05
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
script = ExtResource("6_u3vox")

[node name="WIPButton" type="Button" parent="Levels"]
layout_mode = 1
anchors_preset = -1
anchor_left = 26.800001
anchor_top = 11.85
anchor_right = 26.800001
anchor_bottom = 11.85
offset_left = -287.0
offset_top = -164.0
focus_mode = 0

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Levels/FirstFiveButton" to="." method="_on_first_five_button_pressed"]
[connection signal="pressed" from="Levels/FirstFifteenButton" to="." method="_on_first_fifteen_button_pressed"]
[connection signal="pressed" from="Levels/FirstTwentyFiveButton" to="." method="_on_first_twenty_five_button_pressed"]
[connection signal="pressed" from="Levels/FirstThirtyFiveButton" to="." method="_on_first_thirty_five_button_pressed"]
[connection signal="pressed" from="Levels/AllHiraganaButton" to="." method="_on_all_hiragana_button_pressed"]
